parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    SQROPEN
    NEWLINE
    COMMA
    COL
    FLOAT
    ignore
    SQRCLOSE
    TYPE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> MAIN
Rule 2     statement -> PRINT LPAREN STR RPAREN SEMCOL
Rule 3     statement -> KEYWORD expression statement
Rule 4     statement -> KEYWORD expression statement KEYWORD statement
Rule 5     statement -> BLOCKSTART statement BLOCKEND
Rule 6     statement -> statement statement
Rule 7     statement -> KEYWORD
Rule 8     statement -> LET NAME EQUALS expression SEMCOL
Rule 9     statement -> NAME EQUALS expression SEMCOL
Rule 10    statement -> expression SEMCOL
Rule 11    statement -> expression
Rule 12    while_expression -> expression
Rule 13    statement -> KEYWORD while_expression statement
Rule 14    expression -> expression GT expression
Rule 15    expression -> expression GE expression
Rule 16    expression -> expression LT expression
Rule 17    expression -> expression LE expression
Rule 18    expression -> expression EQ expression
Rule 19    expression -> expression NE expression
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression MUL expression
Rule 23    expression -> expression DIV expression
Rule 24    expression -> binop_exp
Rule 25    binop_exp -> expression PLEQ expression
Rule 26    binop_exp -> expression MINEQ expression
Rule 27    binop_exp -> expression MULEQ expression
Rule 28    binop_exp -> expression DIVEQ expression
Rule 29    expression -> increment_exp
Rule 30    expression -> decrement_exp
Rule 31    decrement_exp -> DECREMENT NAME
Rule 32    increment_exp -> INCREMENT NAME
Rule 33    expression -> expression AND expression
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression BITAND expression
Rule 36    expression -> expression BITOR expression
Rule 37    expression -> expression BITNOT expression
Rule 38    expression -> NOT expression
Rule 39    expression -> MINUS expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> NUMBER
Rule 42    expression -> NAME

Terminals, with rules where they appear

AND                  : 33
BITAND               : 35
BITNOT               : 37
BITOR                : 36
BLOCKEND             : 5
BLOCKSTART           : 5
COL                  : 
COMMA                : 
DECREMENT            : 31
DIV                  : 23
DIVEQ                : 28
EQ                   : 18
EQUALS               : 8 9
FLOAT                : 
GE                   : 15
GT                   : 14
INCREMENT            : 32
KEYWORD              : 3 4 4 7 13
LE                   : 17
LET                  : 8
LPAREN               : 2 40
LT                   : 16
MAIN                 : 1
MINEQ                : 26
MINUS                : 21 39
MUL                  : 22
MULEQ                : 27
NAME                 : 8 9 31 32 42
NE                   : 19
NEWLINE              : 
NOT                  : 38
NUMBER               : 41
OR                   : 34
PLEQ                 : 25
PLUS                 : 20
PRINT                : 2
RPAREN               : 2 40
SEMCOL               : 2 8 9 10
SQRCLOSE             : 
SQROPEN              : 
STR                  : 2
TYPE                 : 
error                : 
ignore               : 

Nonterminals, with rules where they appear

binop_exp            : 24
decrement_exp        : 30
expression           : 3 4 8 9 10 11 12 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 25 25 26 26 27 27 28 28 33 33 34 34 35 35 36 36 37 37 38 39 40
increment_exp        : 29
statement            : 3 4 4 5 6 6 13 0
while_expression     : 13

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . MAIN
    (2) statement -> . PRINT LPAREN STR RPAREN SEMCOL
    (3) statement -> . KEYWORD expression statement
    (4) statement -> . KEYWORD expression statement KEYWORD statement
    (5) statement -> . BLOCKSTART statement BLOCKEND
    (6) statement -> . statement statement
    (7) statement -> . KEYWORD
    (8) statement -> . LET NAME EQUALS expression SEMCOL
    (9) statement -> . NAME EQUALS expression SEMCOL
    (10) statement -> . expression SEMCOL
    (11) statement -> . expression
    (13) statement -> . KEYWORD while_expression statement
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . binop_exp
    (29) expression -> . increment_exp
    (30) expression -> . decrement_exp
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression BITAND expression
    (36) expression -> . expression BITOR expression
    (37) expression -> . expression BITNOT expression
    (38) expression -> . NOT expression
    (39) expression -> . MINUS expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . NAME
    (25) binop_exp -> . expression PLEQ expression
    (26) binop_exp -> . expression MINEQ expression
    (27) binop_exp -> . expression MULEQ expression
    (28) binop_exp -> . expression DIVEQ expression
    (32) increment_exp -> . INCREMENT NAME
    (31) decrement_exp -> . DECREMENT NAME

    MAIN            shift and go to state 10
    PRINT           shift and go to state 3
    KEYWORD         shift and go to state 1
    BLOCKSTART      shift and go to state 16
    LET             shift and go to state 13
    NAME            shift and go to state 11
    NOT             shift and go to state 14
    MINUS           shift and go to state 4
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 2
    INCREMENT       shift and go to state 6
    DECREMENT       shift and go to state 15

    decrement_exp                  shift and go to state 7
    increment_exp                  shift and go to state 8
    binop_exp                      shift and go to state 12
    statement                      shift and go to state 5
    expression                     shift and go to state 17

state 1

    (3) statement -> KEYWORD . expression statement
    (4) statement -> KEYWORD . expression statement KEYWORD statement
    (7) statement -> KEYWORD .
    (13) statement -> KEYWORD . while_expression statement
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . binop_exp
    (29) expression -> . increment_exp
    (30) expression -> . decrement_exp
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression BITAND expression
    (36) expression -> . expression BITOR expression
    (37) expression -> . expression BITNOT expression
    (38) expression -> . NOT expression
    (39) expression -> . MINUS expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . NAME
    (12) while_expression -> . expression
    (25) binop_exp -> . expression PLEQ expression
    (26) binop_exp -> . expression MINEQ expression
    (27) binop_exp -> . expression MULEQ expression
    (28) binop_exp -> . expression DIVEQ expression
    (32) increment_exp -> . INCREMENT NAME
    (31) decrement_exp -> . DECREMENT NAME

  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for INCREMENT resolved as shift
  ! shift/reduce conflict for DECREMENT resolved as shift
    MAIN            reduce using rule 7 (statement -> KEYWORD .)
    PRINT           reduce using rule 7 (statement -> KEYWORD .)
    KEYWORD         reduce using rule 7 (statement -> KEYWORD .)
    BLOCKSTART      reduce using rule 7 (statement -> KEYWORD .)
    LET             reduce using rule 7 (statement -> KEYWORD .)
    $end            reduce using rule 7 (statement -> KEYWORD .)
    BLOCKEND        reduce using rule 7 (statement -> KEYWORD .)
    NOT             shift and go to state 14
    MINUS           shift and go to state 4
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 2
    NAME            shift and go to state 18
    INCREMENT       shift and go to state 6
    DECREMENT       shift and go to state 15

  ! NAME            [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! NOT             [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! MINUS           [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! LPAREN          [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! NUMBER          [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! INCREMENT       [ reduce using rule 7 (statement -> KEYWORD .) ]
  ! DECREMENT       [ reduce using rule 7 (statement -> KEYWORD .) ]

    decrement_exp                  shift and go to state 7
    increment_exp                  shift and go to state 8
    binop_exp                      shift and go to state 12
    while_expression               shift and go to state 19
    expression                     shift and go to state 20

state 2

    (41) expression -> NUMBER .

    RPAREN          reduce using rule 41 (expression -> NUMBER .)
    GT              reduce using rule 41 (expression -> NUMBER .)
    GE              reduce using rule 41 (expression -> NUMBER .)
    LT              reduce using rule 41 (expression -> NUMBER .)
    LE              reduce using rule 41 (expression -> NUMBER .)
    EQ              reduce using rule 41 (expression -> NUMBER .)
    NE              reduce using rule 41 (expression -> NUMBER .)
    PLUS            reduce using rule 41 (expression -> NUMBER .)
    MINUS           reduce using rule 41 (expression -> NUMBER .)
    MUL             reduce using rule 41 (expression -> NUMBER .)
    DIV             reduce using rule 41 (expression -> NUMBER .)
    AND             reduce using rule 41 (expression -> NUMBER .)
    OR              reduce using rule 41 (expression -> NUMBER .)
    BITAND          reduce using rule 41 (expression -> NUMBER .)
    BITOR           reduce using rule 41 (expression -> NUMBER .)
    BITNOT          reduce using rule 41 (expression -> NUMBER .)
    PLEQ            reduce using rule 41 (expression -> NUMBER .)
    MINEQ           reduce using rule 41 (expression -> NUMBER .)
    MULEQ           reduce using rule 41 (expression -> NUMBER .)
    DIVEQ           reduce using rule 41 (expression -> NUMBER .)
    SEMCOL          reduce using rule 41 (expression -> NUMBER .)
    MAIN            reduce using rule 41 (expression -> NUMBER .)
    PRINT           reduce using rule 41 (expression -> NUMBER .)
    KEYWORD         reduce using rule 41 (expression -> NUMBER .)
    BLOCKSTART      reduce using rule 41 (expression -> NUMBER .)
    LET             reduce using rule 41 (expression -> NUMBER .)
    NAME            reduce using rule 41 (expression -> NUMBER .)
    NOT             reduce using rule 41 (expression -> NUMBER .)
    LPAREN          reduce using rule 41 (expression -> NUMBER .)
    NUMBER          reduce using rule 41 (expression -> NUMBER .)
    INCREMENT       reduce using rule 41 (expression -> NUMBER .)
    DECREMENT       reduce using rule 41 (expression -> NUMBER .)
    $end            reduce using rule 41 (expression -> NUMBER .)
    BLOCKEND        reduce using rule 41 (expression -> NUMBER .)


state 3

    (2) statement -> PRINT . LPAREN STR RPAREN SEMCOL

    LPAREN          shift and go to state 21


state 4

    (39) expression -> MINUS . expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . binop_exp
    (29) expression -> . increment_exp
    (30) expression -> . decrement_exp
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression BITAND expression
    (36) expression -> . expression BITOR expression
    (37) expression -> . expression BITNOT expression
    (38) expression -> . NOT expression
    (39) expression -> . MINUS expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . NAME
    (25) binop_exp -> . expression PLEQ expression
    (26) binop_exp -> . expression MINEQ expression
    (27) binop_exp -> . expression MULEQ expression
    (28) binop_exp -> . expression DIVEQ expression
    (32) increment_exp -> . INCREMENT NAME
    (31) decrement_exp -> . DECREMENT NAME

    NOT             shift and go to state 14
    MINUS           shift and go to state 4
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 2
    NAME            shift and go to state 18
    INCREMENT       shift and go to state 6
    DECREMENT       shift and go to state 15

    decrement_exp                  shift and go to state 7
    expression                     shift and go to state 22
    increment_exp                  shift and go to state 8
    binop_exp                      shift and go to state 12

state 5

    (0) S' -> statement .
    (6) statement -> statement . statement
    (1) statement -> . MAIN
    (2) statement -> . PRINT LPAREN STR RPAREN SEMCOL
    (3) statement -> . KEYWORD expression statement
    (4) statement -> . KEYWORD expression statement KEYWORD statement
    (5) statement -> . BLOCKSTART statement BLOCKEND
    (6) statement -> . statement statement
    (7) statement -> . KEYWORD
    (8) statement -> . LET NAME EQUALS expression SEMCOL
    (9) statement -> . NAME EQUALS expression SEMCOL
    (10) statement -> . expression SEMCOL
    (11) statement -> . expression
    (13) statement -> . KEYWORD while_expression statement
    (14) expression -> . expression GT expression
    (15) expression -> . expression GE expression
    (16) expression -> . expression LT expression
    (17) expression -> . expression LE expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . binop_exp
    (29) expression -> . increment_exp
    (30) expression -> . decrement_exp
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression BITAND expression
    (36) expression -> . expression BITOR expression
    (37) expression -> . expression BITNOT expression
    (38) expression -> . NOT expression
    (39) expression -> . MINUS expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . NAME
    (25) binop_exp -> . expression PLEQ expression
    (26) binop_exp -> . expression MINEQ expression
    (27) binop_exp -> . expression MULEQ expression
    (28) binop_exp -> . expression DIVEQ expression
    (32) increment_exp -> . INCREMENT NAME
    (31) decrement_exp -> . DECREMENT NAME

    MAIN            shift and go to state 10
    PRINT           shift and go to state 3
    KEYWORD         shift and go to state 1
    BLOCKSTART      shift and go to state 16
    LET             shift and go to state 13
    NAME            shift and go to state 11
    NOT             shift and go to state 14
    MINUS           shift and go to state 4
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 2
    INCREMENT       shift and go to state 6
    DECREMENT       shift and go to state 15

    decrement_exp                  shift and go to state 7
    increment_exp                  shift and go to state 8
    binop_exp                      shift and go to state 12
    statement                      shift and go to state 23
    expression                     shift and go to state 17

state 6

    (32) increment_exp -> INCREMENT . NAME

    NAME            shift and go to state 24


state 7

    (30) expression -> decrement_exp .

    RPAREN          reduce using rule 30 (expression -> decrement_exp .)
    GT              reduce using rule 30 (expression -> decrement_exp .)
    GE              reduce using rule 30 (expression -> decrement_exp .)
    LT              reduce using rule 30 (expression -> decrement_exp .)
    LE              reduce using rule 30 (expression -> decrement_exp .)
    EQ              reduce using rule 30 (expression -> decrement_exp .)
    NE              reduce using rule 30 (expression -> decrement_exp .)
    PLUS            reduce using rule 30 (expression -> decrement_exp .)
    MINUS           reduce using rule 30 (expression -> decrement_exp .)
    MUL             reduce using rule 30 (expression -> decrement_exp .)
    DIV             reduce using rule 30 (expression -> decrement_exp .)
    AND             reduce using rule 30 (expression -> decrement_exp .)
    OR              reduce using rule 30 (expression -> decrement_exp .)
    BITAND          reduce using rule 30 (expression -> decrement_exp .)
    BITOR           reduce using rule 30 (expression -> decrement_exp .)
    BITNOT          reduce using rule 30 (expression -> decrement_exp .)
    PLEQ            reduce using rule 30 (expression -> decrement_exp .)
    MINEQ           reduce using rule 30 (expression -> decrement_exp .)
    MULEQ           reduce using rule 30 (expression -> decrement_exp .)
    DIVEQ           reduce using rule 30 (expression -> decrement_exp .)
    SEMCOL          reduce using rule 30 (expression -> decrement_exp .)
    MAIN            reduce using rule 30 (expression -> decrement_exp .)
    PRINT           reduce using rule 30 (expression -> decrement_exp .)
    KEYWORD         reduce using rule 30 (expression -> decrement_exp .)
    BLOCKSTART      reduce using rule 30 (expression -> decrement_exp .)
    LET             reduce using rule 30 (expression -> decrement_exp .)
    NAME            reduce using rule 30 (expression -> decrement_exp .)
    NOT             reduce using rule 30 (expression -> decrement_exp .)
    LPAREN          reduce using rule 30 (expression -> decrement_exp .)
    NUMBER          reduce using rule 30 (expression -> decrement_exp .)
    INCREMENT       reduce using rule 30 (expression -> decrement_exp .)
    DECREMENT       reduce using rule 30 (expression -> decrement_exp .)
    $end            reduce using rule 30 (expression -> decrement_exp .)
    BLOCKEND        reduce using rule 30 (expression -> decrement_exp .)


state 8

    (29) expression -> increment_exp .

    RPAREN          reduce using rule 29 (expression -> increment_exp .)
    GT              reduce using rule 29 (expression -> increment_exp .)
    GE              reduce using rule 29 (expression -> increment_exp .)
    LT              reduce using rule 29 (expression -> increment_exp .)
    LE              reduce using rule 29 (expression -> increment_exp .)
    EQ              reduce using rule 29 (expression -> increment_exp .)
    NE              reduce using rule 29 (expression -> increment_exp .)
    PLUS            reduce using rule 29 (expression -> increment_exp .)
    MINUS           reduce using rule 29 (expression -> increment_exp .)
    MUL             reduce using rule 29 (expression -> increment_exp .)
    DIV             reduce using rule 29 (expression -> increment_exp .)
    AND             reduce using rule 29 (expression -> increment_exp .)
    OR              reduce using rule 29 (expression -> increment_exp .)
    BITAND          reduce using rule 29 (expression -> increment_exp .)
    BITOR           reduce using rule 29 (expression -> increment_exp .)
    BITNOT          reduce using rule 29 (expression -> increment_exp .)
    PLEQ            reduce using rule 29 (expression -> increment_exp .)
    MINEQ           reduce using rule 29 (expression -> increment_exp .)
    MULEQ           reduce using rule 29 (expression -> increment_exp .)
    DIVEQ           reduce using rule 29 (expression -> increment_exp .)
    SEMCOL          reduce using rule 29 (expression -> increment_exp .)
    MAIN            reduce using rule 29 (expression -> increment_exp .)
    PRINT           reduce using rule 29 (expression -> increment_exp .)
    KEYWORD         reduce using rule 29 (expression -> increment_exp .)
    BLOCKSTART      reduce using rule 29 (expression -> increment_exp .)
    LET             reduce using rule 29 (expression -> increment_exp .)
    NAME            reduce using rule 29 (expression -> increment_exp .)
    NOT             reduce using rule 29 (expression -> increment_exp .)
    LPAREN          reduce using rule 29 (expression -> increment_exp .)
    NUMBER          reduce using rule 29 (expression -> increment_exp .)
    INCREMENT       reduce using rule 29 (expression -> increment_exp .)
    DECREMENT       reduce using rule 29 (expression -> increment_exp .)
    $end            reduce using rule 29 (expression -> increment_exp .)
    BLOCKEND        reduce using rule 29 (expression -> increment_exp .)


state 9
